refactoring with UUID removing httpSession
